--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@date-io/moment": "^1.3.13",
     "@material-ui/pickers": "^3.3.10",
+    "dotenv": "^8.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "realm-web": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
