--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/moment": "^1.3.13",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "^3.3.10",
     "dotenv": "^8.2.0",
     "moment": "^2.29.1",
